--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/postcss": "^4.1.12",
     "formidable": "^3.5.4",
+    "lucide-react": "^0.541.0",
     "next": "15.4.6",
     "openai": "^5.15.0",
     "postcss": "^8.5.6",
